== 2.0 / 2022-MM-DD

* Major enhancements:
  * Dropped support for Ruby 2.6 or lower.
  * Removed all deprecated methods and constant handlers.

* Minor enhancements:

* Bug fixes:

* Tooling changes:

== 1.8 / 2015-10-26

* 1 minor enhancement:

  * Add an optional +alpha+ parameter to all #css_rgba calls. Thanks to Luke
    Bennellick (@bennell) and Alexander Popov (@AlexWayfer) for independently
    implemented submissions. Merged from #15.

* 2 minor bug fixes:

  * Improve constant detection to prevent incorrectly identified name
    collisions with various other libraries such as Azure deployment tools.
    Based on work by Matthew Draper (@matthewd) in #24.

  * Prevent Color.equivalent? comparisons from using non-Color types for
    comparison. Fix provided by Benjamin Guest (@bguest) in #18.

* 1 governance change

  * This project now has a {Code of Conduct}[Code-of-Conduct_rdoc.html]


== 1.7.1 / 2014-06-12

* Minor enhancements:

  * Renamed Color::RGB::BeccaPurple to Color::RGB::RebeccaPurple as stipulated
    by Eric Meyer. http://meyerweb.com/eric/thoughts/2014/06/19/rebeccapurple/
    For purposes of backwards compatibility, the previous name is still
    permitted, but its use is strongly discouraged, and it will be removed in
    the Color 2.0 release.

== 1.7 / 2014-06-12

* Minor enhancements:
  * Added Color::RGB::BeccaPurple (#663399) in honour of Rebecca Meyer, the
    daughter of Eric Meyer, who passed away on the 7th of June, 2014. Her
    favourite colour was purple. #663399becca
    https://twitter.com/meyerweb/status/476089708674428929
    http://www.zeldman.com/2014/06/10/the-color-purple/
    http://discourse.specifiction.org/t/name-663399-becca-purple-in-css4-color/225

* Bug fixes:
  * Changed the homepage in the gem to point to github.com instead of
    RubyForge, which has been shut down. Fixes #10, reported by @voxik.

== 1.6 / 2014-05-19

* Major enhancements: